
CHANGES

$Id$
================== Release 4.0.0-dev ==============

(No Changes)

================== Release 3.6.0 ==================

* SOLR-2937: Configuring the number of contextual snippets used for 
  search results clustering. The hl.snippets parameter is now respected
  by the clustering plugin, can be overridden by carrot.summarySnippets
  if needed (Stanislaw Osinski).

================== Release 3.5.0 ==================

(No Changes)

================== Release 3.4.0 ==================

* SOLR-2706: The carrot.lexicalResourcesDir parameter now works 
  with absolute directories (Stanislaw Osinski)
  
* SOLR-2692: Typo in param name fixed: "carrot.fragzise" changed to 
  "carrot.fragSize" (Stanislaw Osinski).

================== Release 3.3.0 ==================

(No Changes)

================== Release 3.2.0 ==================

* SOLR-2448: Search results clustering updates: bisecting k-means
  clustering algorithm added, loading of Carrot2 stop words from
  <solr.home>/conf/carrot2 (SOLR-2449), using Solr's stopwords.txt
  for clustering (SOLR-2450), output of cluster scores (SOLR-2505)
  (Stanislaw Osinski, Dawid Weiss).

================== Release 3.1.0 ==================

* SOLR-1684: Switch to use the SolrIndexSearcher.doc(int, Set<String>) method b/c it can use the document cache (gsingers)

* SOLR-1692: Fix bug relating to carrot.produceSummary option (gsingers)

* SOLR-1804: Re-enabled clustering on trunk, updated to latest version of Carrot2.  No more LGPL run-time dependencies.
  This release of C2 also does not have a specific Lucene dependency.  (Stanislaw Osinski, gsingers)

* SOLR-2282: Add distributed search support for search result clustering.
  (Brad Giaccio, Dawid Weiss, Stanislaw Osinski, rmuir, koji)

================== Release 1.4.0 ==================

Solr Clustering will be released for the first time in Solr 1.4.  See http://wiki.apache.org/solr/ClusteringComponent
 for details on using.